--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
                     <includes><include>**/*</include></includes>
                     <repositoryName>product-market-interface</repositoryName>
                     <repositoryOwner>AnarbekB</repositoryOwner>
+                    <merge>true</merge>
                 </configuration>
                 <executions>
                     <execution>
